# ifc_viewer

./: .gitignore  Homepage.py  Makefile  README.md  pyproject.toml  test.py
.streamlit/: config.toml
pages/: Tree.py  Viewer.py
pages/frontend-viewer/: index.html  main.js
pages/models/: app.js  index.html  main.js
pages/models/components/: streamlit-component-lib.js
tools/: designHTML.py  designhtml.py  ifcArea.py  ifcData.py  ifcProperties.py  ifcTableSet.py  ifcdataparse.py  ifchelper.py  pandashelper.py
