[tool.poetry]
name = "ifc-viewer"
version = "0.1.0"
description = ""
authors = ["Александр Мышкин <sir.myshkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
ifcopenshell = {version = "^0.7", python = ">=3.11,<3.13" }
python = "^3.11"
matplotlib = "^3.8.4"
plotly = "^5.21.0"
pandas = "^2.2.2"
xlsxwriter = "^3.2.0"
streamlit = "1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
